dataset1235/2025-2/805158916/users/2802924318/executions/2118643220_1128387558.log
== RUN (2025-09-01 14:28:10)
-- CODE: 
valorEmDolarNeozelandes = float (input())
Valor EmReais= Valor EmDolarNeozelandes * 2,96
print (Valor EmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 2
    Valor EmReais= Valor EmDolarNeozelandes * 2,96
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 2
    Valor EmReais= Valor EmDolarNeozelandes * 2,96
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 2
    Valor EmReais= Valor EmDolarNeozelandes * 2,96
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 2
    Valor EmReais= Valor EmDolarNeozelandes * 2,96
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 2
    Valor EmReais= Valor EmDolarNeozelandes * 2,96
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 2
    Valor EmReais= Valor EmDolarNeozelandes * 2,96
          ^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:30:16)
-- CODE: 
valorEmDolarNeozelandes = float (input())
ValorEmReais= ValorEmDolarNeozelandes * 2.96
print (ValorEmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:31:40)
-- CODE: 
valorEmDolarNeozelandes = float (input())
ValorEmReais= ValorEmDolarNeozelandes * 2.96
print (ValorEmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:27:30)
-- CODE: 
valor EmDolarNeozelandes = floatinput()
Valor EmReais= Valor EmDolarNeozelandes * 2,96
print (Valor EmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = floatinput()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = floatinput()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = floatinput()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = floatinput()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = floatinput()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = floatinput()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:20:15)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
None
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
None
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
None
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:28:34)
-- CODE: 
valorEmDolarNeozelandes = float (input())
ValorEmReais= Valor EmDolarNeozelandes * 2.96
print (Valor EmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 2
    ValorEmReais= Valor EmDolarNeozelandes * 2.96
                        ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 2
    ValorEmReais= Valor EmDolarNeozelandes * 2.96
                        ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 2
    ValorEmReais= Valor EmDolarNeozelandes * 2.96
                        ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 2
    ValorEmReais= Valor EmDolarNeozelandes * 2.96
                        ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 2
    ValorEmReais= Valor EmDolarNeozelandes * 2.96
                        ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 2
    ValorEmReais= Valor EmDolarNeozelandes * 2.96
                        ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:27:18)
-- CODE: 
valor EmDolarNeozelandes = float(input()
Valor EmReais= Valor EmDolarNeozelandes * 2,96
print (Valor EmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float(input()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float(input()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float(input()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float(input()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float(input()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float(input()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:28:25)
-- CODE: 
valorEmDolarNeozelandes = float (input())
Valor EmReais= Valor EmDolarNeozelandes * 2.96
print (Valor EmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 2
    Valor EmReais= Valor EmDolarNeozelandes * 2.96
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 2
    Valor EmReais= Valor EmDolarNeozelandes * 2.96
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 2
    Valor EmReais= Valor EmDolarNeozelandes * 2.96
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 2
    Valor EmReais= Valor EmDolarNeozelandes * 2.96
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 2
    Valor EmReais= Valor EmDolarNeozelandes * 2.96
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 2
    Valor EmReais= Valor EmDolarNeozelandes * 2.96
          ^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:28:45)
-- CODE: 
valorEmDolarNeozelandes = float (input())
ValorEmReais= ValorEmDolarNeozelandes * 2.96
print (ValorEmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:27:38)
-- CODE: 
valor EmDolarNeozelandes = float (input())
Valor EmReais= Valor EmDolarNeozelandes * 2,96
print (Valor EmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float (input())
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float (input())
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float (input())
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float (input())
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float (input())
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float (input())
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:32:16)
-- CODE: 
ValorEmDolarNeozelandes = float (input())
ValorEmReais= ValorEmDolarNeozelandes * 2.96
print (ValorEmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
20.72
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
2.96
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
23.68
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
56.24
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
62.16
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
5.92
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:28:40)
-- CODE: 
valorEmDolarNeozelandes = float (input())
ValorEmReais= ValorEmDolarNeozelandes * 2.96
print (Valor EmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 3
    print (Valor EmReais)
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 3
    print (Valor EmReais)
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 3
    print (Valor EmReais)
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 3
    print (Valor EmReais)
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 3
    print (Valor EmReais)
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 3
    print (Valor EmReais)
           ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:27:29)
-- CODE: 
valor EmDolarNeozelandes = floatinput()
Valor EmReais= Valor EmDolarNeozelandes * 2,96
print (Valor EmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = floatinput()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = floatinput()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = floatinput()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = floatinput()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = floatinput()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = floatinput()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:27:06)
-- CODE: 
valor EmDolarNeozelandes = float(input()
Valor EmReais= Valor EmDolarNeozelandes * 2,96
print (Valor EmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float(input()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float(input()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float(input()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float(input()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float(input()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float(input()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:32:08)
-- CODE: 
ValorEmDolarNeozelandes = float (input())
ValorEmReais= ValorEmDolarNeozelandes * 2.96
print (ValorEmReais)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
20.72
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
2.96
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
23.68
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
56.24
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
62.16
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
5.92
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:28:20)
-- CODE: 
valorEmDolarNeozelandes = float (input())
Valor EmReais= Valor EmDolarNeozelandes * 2.96
print (Valor EmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 2
    Valor EmReais= Valor EmDolarNeozelandes * 2.96
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 2
    Valor EmReais= Valor EmDolarNeozelandes * 2.96
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 2
    Valor EmReais= Valor EmDolarNeozelandes * 2.96
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 2
    Valor EmReais= Valor EmDolarNeozelandes * 2.96
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 2
    Valor EmReais= Valor EmDolarNeozelandes * 2.96
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 2
    Valor EmReais= Valor EmDolarNeozelandes * 2.96
          ^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:28:54)
-- CODE: 
valorEmDolarNeozelandes = float (input())
ValorEmReais= ValorEmDolarNeozelandes * 2.96
print (ValorEmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:32:04)
-- CODE: 
ValorEmDolarNeozelandes = float (input())
ValorEmReais= ValorEmDolarNeozelandes * 2.96
print (ValorEmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
20.72
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
2.96
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
23.68
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
56.24
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
62.16
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
5.92
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:27:48)
-- CODE: 
valor EmDolarNeozelandes = float input()
Valor EmReais= Valor EmDolarNeozelandes * 2,96
print (Valor EmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float input()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float input()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float input()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float input()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float input()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float input()
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:26:55)
-- CODE: 
valor EmDolarNeozelandes = float(input())
Valor EmReais= Valor EmDolarNeozelandes * 2,96
print (Valor EmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float(input())
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float(input())
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float(input())
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float(input())
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float(input())
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 1
    valor EmDolarNeozelandes = float(input())
          ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:30:14)
-- CODE: 
valorEmDolarNeozelandes = float (input())
ValorEmReais= ValorEmDolarNeozelandes * 2.96
print (ValorEmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:28:58)
-- CODE: 
valorEmDolarNeozelandes = float (input())
ValorEmReais= ValorEmDolarNeozelandes * 2.96
print (ValorEmReais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ValorEmReais= ValorEmDolarNeozelandes * 2.96
                  ^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'ValorEmDolarNeozelandes' is not defined. Did you mean: 'valorEmDolarNeozelandes'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
